Removed lots of redundant stuff. Simplified localization.

--- a/AdvancedProgramming_Lesson2/AdvancedProgramming_Lesson2/Resources/SharedResource.de.resx
+++ b/AdvancedProgramming_Lesson2/AdvancedProgramming_Lesson2/Resources/SharedResource.de.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,16 +117,25 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="About" xml:space="preserve">
+    <value>Über</value>
+  </data>
   <data name="Home" xml:space="preserve">
-    <value>Strona główna</value>
+    <value>Zuhause</value>
+  </data>
+  <data name="Learn End" xml:space="preserve">
+    <value>über die Erstellung von mvc .net Core Apps</value>
+  </data>
+  <data name="Learn Start" xml:space="preserve">
+    <value>Lernen</value>
   </data>
   <data name="Privacy" xml:space="preserve">
-    <value>Prywatność</value>
+    <value>Privatsphäre</value>
   </data>
   <data name="Privacy Policy" xml:space="preserve">
-    <value>Polityka prywatności</value>
+    <value>Datenschutz-Bestimmungen</value>
   </data>
   <data name="Privacy Policy Content" xml:space="preserve">
-    <value>To jest tajemnica</value>
+    <value>Das ist ein Geheimnis</value>
   </data>
 </root>
